@@ -3,6 +3,7 @@ next
 ----
 - "sounds:play" now returns handle & sound file name string
 - added "sounds:stop" wrapper function for "core:sound_stop"
+- added setting "sounds.enable_tests"
 
 
 v1.8
